[package]
name = "undsm"
version = "0.1.0"
edition = "2021"
authors = ["Yazawazi <yazawazi@yazawazi.moe>"]
description = "A simple tool to decode/encode Peaky's Haha"
homepage = "https://github.com/Yazawazi/unhaha"
repository = "https://github.com/Yazawazi/unhaha"
readme = "README.md"
keywords = ["peaky"]
categories = ["command-line-utilities"]
license = "MIT"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
crypto2 = "0.1.2"
base64 = "0.20.0"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
