[package]
name = "undsm"
version = "0.1.0"
edition = "2021"
authors = ["Yazawazi <yazawazi@yazawazi.moe>"]
description = "A simple tool to decode/encode Peaky's Haha"
homepage = "https://github.com/Yazawazi/unhaha"
repository = "https://github.com/Yazawazi/unhaha"
readme = "README.md"
keywords = ["peaky"]
categories = ["command-line-utilities"]
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
base64 = "0.20.0"
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["std"] }

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
